--- a/HueHookServer/HueHookServer.csproj
+++ b/HueHookServer/HueHookServer.csproj
@@ -105,6 +105,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoolParser.cs" />
     <Compile Include="HookReceiver.cs" />
     <Compile Include="Hue.cs" />
     <Compile Include="Program.cs" />
