--- a/HueHookServer/HueHookServer.csproj
+++ b/HueHookServer/HueHookServer.csproj
@@ -111,7 +111,6 @@
     <Compile Include="HueParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Whitelist.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -119,6 +118,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HueHook\HueHook.csproj">
+      <Project>{e7c22182-f572-4f18-aedd-5d991672c50e}</Project>
+      <Name>HueHook</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
