--- a/HueHookServiceTray/HueHookServiceTray.csproj
+++ b/HueHookServiceTray/HueHookServiceTray.csproj
@@ -31,9 +31,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,22 +54,22 @@
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
     <Compile Include="ContextMenus.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="ProcessIcon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
+    <EmbeddedResource Include="Properties\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -82,7 +84,37 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\light_blub.ico" />
+    <ProjectReference Include="..\HueHook\HueHook.csproj">
+      <Project>{e7c22182-f572-4f18-aedd-5d991672c50e}</Project>
+      <Name>HueHook</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\039-file-text2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\111-bubble2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\146-wrench.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\150-cogs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\183-switch.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\277-exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\285-play3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\287-stop2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bulb_black.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
