--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,12 +18,12 @@ build:
   project: HueHook.sln
   verbosity: minimal
 after_build:
-- cmd: 7z a HueHook.zip %APPVEYOR_BUILD_FOLDER%\HueHookServer\bin\%CONFIGURATION%\*.exe %APPVEYOR_BUILD_FOLDER%\HueHookServer\bin\%CONFIGURATION%\*.dll %APPVEYOR_BUILD_FOLDER%\HueCmd\bin\%CONFIGURATION%\*.exe
+- cmd: 7z a HueHook-%CONFIGURATION%-%APPVEYOR_BUILD_VERSION%.zip %APPVEYOR_BUILD_FOLDER%\HueHookServer\bin\%CONFIGURATION%\*.exe %APPVEYOR_BUILD_FOLDER%\HueHookServer\bin\%CONFIGURATION%\*.dll %APPVEYOR_BUILD_FOLDER%\HueCmd\bin\%CONFIGURATION%\*.exe
 artifacts:
-- path: HueHook.zip
+- path: HueHook-%CONFIGURATION%-%APPVEYOR_BUILD_VERSION%.zip
 deploy:
 - provider: GitHub
-  description: '`HueHook.zip` contains the program (HueHookServer.exe) and all needed library files (*.dll).'
+  description: '`HueHook-%CONFIGURATION%-%APPVEYOR_BUILD_VERSION%.zip` contains the program (HueHookServer.exe) and all needed library files (*.dll).\n\n#### Last commit message\n%APPVEYOR_REPO_COMMIT_MESSAGE%'
   auth_token:
     secure: 9pN0zXgw1jNaPCo0m14eC3+IUZPy/y4zL/kdbdzvcMIDcT1zpkPwYF1LijP5EB+J
   prerelease: true
